# batch_processing_backup

./: .gitignore  README.md  README_parquet_to_psql.md  config.py  main.py  parquet_to_psql.sh  requirements.txt
airflow/: Dockerfile  emr_dag.py  (+4 more)
batch-processing/: README.md  pyproject.toml
batch-processing/batch_processing/db_reader/: __init__.py  main.py
batch-processing/batch_processing/parquet_reader/: __init__.py  main.py
batch-processing/batch_processing/pipeline/: __init__.py
batch-processing/batch_processing/pipeline/api/: API.py
batch-processing/batch_processing/pipeline/correction_batch/: correction_step_pyspark.py
batch-processing/batch_processing/pipeline/create_dataframes/: create_dets_nds_phots_dataframes.py
batch-processing/batch_processing/pipeline/lightcurve_batch/: light_curve_step_pyspark.py
batch-processing/batch_processing/pipeline/magstats/: magstats_pyspark.py  magstats_pyspark_copy.py
batch-processing/batch_processing/pipeline/prv_candidates/: prv_candidates_pyspark.py
batch-processing/batch_processing/pipeline/sorting_hat/: sorting_hat_spark.py
batch-processing/batch_processing/pipeline/spark_init/: pyspark_configs.py
batch-processing/batch_processing/pipeline/xmatch/: xmatch_step_pyspark_refactor.py
batch-processing/batch_processing/ztf/: main.py  schema.py  utils.py
batch-processing/batch_processing/ztf/spark_schemas/: __init__.py  alert.py  candidate.py  cutout.py  fp_hist.py
batch-processing/docs/: create_initial_parquet_files.md
batch-processing/libs/: connectorx-0.3.3-cp39-cp39-manylinux_2_34_aarch64.whl.REMOVED.git-id
batch-processing/libs/batch_utils/: README.md
batch-processing/libs/batch_utils/batch_utils/: __init__.py  types.py
batch-processing/libs/batch_utils/batch_utils/prv_candidates/: __init__.py
batch-processing/libs/performance_timer/: pyproject.toml
batch-processing/libs/performance_timer/performance_timer/: main.py
batch-processing/scripts/: batch_processing_pyspark.py  create_avros_parquets.sh  db_parquet_reader.py  download_data.py  prepare_spark_files.sh  prepare_spark_server.sh  prepare_ztf.py  read_all.py  read_one_load_test.py  test_batch_processing.py
batch-processing/scripts/emr/: batch_processing.py  prepare_files.sh  run_batch_processing.py
batch_processing/batch-processing/: README.md  pyproject.toml
batch_processing/batch-processing/batch_processing/: __init__.py  parquet_reader.py  utils.py  ztf_utils.py
batch_processing/batch-processing/batch_processing/db_reader/: main.py
batch_processing/batch-processing/batch_processing/ztf/: __init__.py  main.py
batch_processing/batch-processing/libs/batch_utils/: pyproject.toml
batch_processing/batch-processing/libs/performance_timer/: pyproject.toml
batch_processing/batch-processing/scripts/: prepare_db.py  prepare_ztf.py  read.py  read_all_lineal.py
(+284 files in other folders)
