[tool.poetry]
name = "batch-processing"
version = "0.1.0"
description = ""
authors = ["ALeRCE"]
packages = [{include = "batch_processing"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,^3.10"
fastavro = "^1.9.3"
requests = "^2.31.0"
boto3 = "^1.34.53"
pyspark = "^3.5.1"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
polars = "^0.20.14"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
pymongo = "^4.6.2"
cramjam = "^2.8.3"

[tool.poetry.group.arm.dependencies]
connectorx = {path = "libs/connectorx-0.3.3-cp39-cp39-manylinux_2_34_aarch64.whl"}

[tool.poetry.group.dev.dependencies]
batch-utils = {path = "libs/batch_utils", develop = true}
performance-timer = {path = "libs/performance_timer", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
