[tool.poetry]
name = "batch-processing"
version = "0.1.0"
description = ""
authors = ["Edison Pizarro <edison.pizarro.godoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastavro = "^1.9.3"
requests = "^2.31.0"
boto3 = "^1.34.53"
pyspark = "^3.5.1"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
polars = "^0.20.14"
batch-utils = {path = "libs/batch_utils", develop = true}
performance-timer = {path = "libs/performance_timer", develop = true}
astropy = "^6.0.0"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
connectorx = "^0.3.2"
pymongo = "^4.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
